# rl-exercise

./: .gitignore  README.md  _config.yaml  config.yaml  pyproject.toml
lightning_logs/version_0/: analysis_version_0.ipynb  config.yaml  hparams.yaml  metrics.csv
lightning_logs/version_1/: analysis_version_1.ipynb  config.yaml  hparams.yaml  metrics.csv
lightning_logs/version_10/: analysis_version_10.ipynb  config.yaml  hparams.yaml  metrics.csv
lightning_logs/version_11/: analysis_version_11.ipynb  config.yaml  hparams.yaml  metrics.csv
lightning_logs/version_12/: analysis_version_12.ipynb  config.yaml  hparams.yaml  metrics.csv
lightning_logs/version_13/: analysis_version_13.ipynb  config.yaml  metrics.csv
lightning_logs/version_14/: config.yaml  hparams.yaml  metrics.csv
lightning_logs/version_15/: config.yaml  metrics.csv
lightning_logs/version_16/: config.yaml  hparams.yaml  metrics.csv
lightning_logs/version_17/: config.yaml  hparams.yaml  metrics.csv
lightning_logs/version_18/: config.yaml  hparams.yaml  metrics.csv
lightning_logs/version_2/: analysis_version_2.ipynb  config.yaml  hparams.yaml  metrics.csv
lightning_logs/version_3/: analysis_version_3.ipynb  config.yaml  hparams.yaml  metrics.csv
lightning_logs/version_4/: analysis_version_4.ipynb  config.yaml  metrics.csv
lightning_logs/version_5/: analysis_version_5.ipynb  metrics.csv
lightning_logs/version_6/: analysis_version_6.ipynb  config.yaml  hparams.yaml  metrics.csv
rl/: agents.py  datasets.py  losses.py  memory.py  models.py  networks.py  play.py  utils.py
(+31 files in other folders)
