[tool.poetry]
name = "rl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0.0"
flappy-bird-gymnasium = { git = "https://github.com/wensle/flappy-bird-gymnasium.git" }
ipykernel = "^6.22.0"
lightning = {extras = ["extra"], version = "^2.0.1.post0"}
plotly = "^5.14.1"
notebook = "^6.5.4"
ipywidgets = "^8.0.6"
pandas = "^2.0.1"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
